2003-06-04  William Radcliffe  <billr@corbis.com>

	* coders/meta.c: Added some casts to make things compile better.

2003-06-03  William Radcliffe  <billr@corbis.com>

	* coders/meta.c: Was broken due to editing mistakes as well
	as inherent incompatability with MagickReallocMemory macro.

2003-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (RegisterXPMImage): Module registration for PICON
	should have been XPM.  Thanks to John Cristy for noticing this
	bug.
	* coders/psd.c (ReadPSDImage): Applied John Cristy's patch to fix
	a index calculation bug which is evident when QuantumDepth>8.

2003-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c: Eliminated some compiler warnings.
	* magick/transform.c (ProfileImage): Eliminated some compiler
	warnings.
	* magick/static.c (RegisterStaticModules): Invoke
	RegisterXTRNImage if _VISUALC_ is defined.

2003-06-02  William Radcliffe  <billr@corbis.com>

	* utilities/gm.c: made -format work again but had to add off flag
	to MagickCommand to maintain backward compatability with previous
	versions of GM.
	* magick/command.c: Added flag to tell MagickCommand whether GM is
	expected to process metadata requests. The COM object *always* does.
	* magick/transform.c: Added error handling, memory leak avoidance
	and performanc enhancment.

2003-06-01  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* NEWS: Added Bug Fixes item with info about the JNG encoder fix.

2003-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Listed significant changes (thus far) in version 1.1.
	* version.sh: Updated LIBRARY_CURRENT and LIBRARY_REVISION since
	some command.c interfaces have changed, and a new interface has
	been added. The only user of these interfaces should be 'gm' but
	it always pays to be careful.
	* utilities/gm.c (main): Use MagickCommand.
	* magick/command.c (MagickCommand): New function to provide
	API-level command access to the command functions provided by the