@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.1"
-#define public MagickPackageVersionAddendum "-20030601"
+#define public MagickPackageVersionAddendum "-20030604"
 #define public MagickPackageReleaseDate "unreleased"
