@@ -53,6 +53,16 @@
 </tr>
 </table>
 <p>
+2003-06-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (VersionCommand): Add build information to
+        version output.<BR>
+  <LI> configure.ac: Save configure/build parameters for later use in
+        version output.
+
+</UL>
+<p>
 2003-06-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
