@@ -79,7 +79,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=LEFT><SPAN STYLE="text-decoration: none"><FONT SIZE=3><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick">GraphicsMagick</A>
+				<P ALIGN=LEFT><SPAN STYLE="text-decoration: none"><FONT SIZE=3><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick">GraphicsMagick</A>
 				(Top directory)</FONT></SPAN></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
@@ -95,7 +95,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=RIGHT><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/beta"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>beta</FONT></SPAN></A></P>
+				<P ALIGN=RIGHT><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/beta"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>beta</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
@@ -105,7 +105,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=RIGHT><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/binaries"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>binaries</FONT></SPAN></A></P>
+				<P ALIGN=RIGHT><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/binaries"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>binaries</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
@@ -117,7 +117,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=RIGHT><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/delegates"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>delegates</FONT></SPAN></A></P>
+				<P ALIGN=RIGHT><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/delegates"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>delegates</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
@@ -157,7 +157,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=RIGHT><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/snapshots"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>snapshots</FONT></SPAN></A></P>
+				<P ALIGN=RIGHT><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/snapshots"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>snapshots</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
@@ -180,7 +180,7 @@ exist since the packages are still under development:</FONT></P>
 		</TR>
 		<TR VALIGN=TOP>
 			<TD WIDTH=19% BGCOLOR="#ffffff">
-				<P ALIGN=RIGHT><A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/windows"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>windows</FONT></SPAN></A></P>
+				<P ALIGN=RIGHT><A HREF="ftp://ftp.graphicsmagick.org/pub/GraphicsMagick/windows"><SPAN STYLE="text-decoration: none"><FONT SIZE=3>windows</FONT></SPAN></A></P>
 			</TD>
 			<TD WIDTH=81% BGCOLOR="#ffffff">
 				<P ALIGN=LEFT STYLE="font-style: normal; font-weight: medium; text-decoration: none">
